# cryptobook

./: .clang-format  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
analysis/: paper_report.py  record_depth.py  requirements.txt  verify_24h.py
bench/: CMakeLists.txt  bench_book.cpp  bench_spsc.cpp  run_bench.sh
cmake/: Dependencies.cmake  Warnings.cmake
config/: testnet.toml
docs/: ARCHITECTURE.md  DECISIONS.md  GAMMA_SWEEP.md  MODEL.md  POSTMORTEM.md  ROADMAP.md  SPEC.md
scripts/: gamma_sweep.sh
src/: CMakeLists.txt
src/core/: book.cpp  book.hpp  clock.hpp  events.hpp  spsc_queue.hpp  types.hpp  version.hpp.in
src/engine/: backoff.cpp  backoff.hpp  config.cpp  config.hpp  crosscheck.cpp  crosscheck.hpp  engine.cpp  engine.hpp  event_log.cpp  event_log.hpp  gap_verifier.cpp  gap_verifier.hpp  main.cpp  market_data_thread.cpp  market_data_thread.hpp  oms.cpp  oms.hpp  replay.cpp  replay.hpp  token_bucket.cpp  token_bucket.hpp
src/exchange/: binance_depth.cpp  binance_depth.hpp  net_transport.hpp  reconstructor.cpp  reconstructor.hpp  rest_client.cpp  rest_client.hpp  signed_rest_client.cpp  signed_rest_client.hpp  signing.cpp  signing.hpp  ws_client.cpp  ws_client.hpp
src/strategy/: as_quoter.cpp  as_quoter.hpp  paper_fills.cpp  paper_fills.hpp  params.hpp  records.hpp  sigma_ewma.cpp  sigma_ewma.hpp  strategy.cpp  strategy.hpp
tests/: CMakeLists.txt  fake_signed_rest.hpp  test_as_quoter.cpp  test_backoff.cpp  test_binance_depth.cpp  test_book.cpp  test_book_replay.cpp  test_crosscheck.cpp  test_event_log.cpp  test_events.cpp  test_gap_verifier.cpp  test_market_data_thread.cpp  test_oms.cpp  test_real_fills.cpp  test_reconstructor.cpp  test_replay.cpp  test_sanity.cpp  test_sigma_ewma.cpp  test_signed_rest.cpp  test_signing.cpp  test_spsc_queue.cpp  test_strategy.cpp  test_strategy_replay.cpp  test_token_bucket.cpp
